tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (14ms).
Loading done.
Simulation version v1_12_0+1497-2613950a092 started with time: 0.00
Simulation ended at time: 1909.00
Reason: Too many teleports.
Performance: 
 Duration: 2.22s
 Real time factor: 861.462
 UPS: 73162.906137
Vehicles: 
 Inserted: 181
 Running: 177
 Waiting: 0
Teleports: 6 (Yield: 1, Wrong Lane: 5)

